ru: additional updates

--- a/Obsidian/Указатель.md
+++ b/Obsidian/Указатель.md
@@ -36,7 +36,7 @@
 - [[Работа с тегами]]
 - [[Работа с обратными ссылками]]
 - [[Работа с несколькими файлами]]
-- [[Макет области]]
+- [[Расположение области]]
 - [[Работа с несколькими хранилищами]]
 - [[Работа с несколькими курсорами]]
 - [[Использование протокола URI]]
