--- a/Руководства/Вложенные файлы.md
+++ b/Руководства/Вложенные файлы.md
@@ -1,44 +1,44 @@
-### Embed attachments
+### Вложенные файлы
 
-You can embed attachment files like images or audio in your notes. Use the `![[filename.png]]` syntax like so:
+Вы можете вложить в заметку файлы, такие как изображения или аудио-файлы. Используйте следующий синтаксис  `![[filename.png]]`:
 
 ![[Engelbart.jpg]]
 
 ![[Excerpt from Mother of All Demos (1968).ogg]]
 
-You can embed a PDF file in your notes with the same syntax. Additionally, you can write `![[My File.pdf#page=number]]` to open to that specific page of the PDF directly.
+Вы можете вложить PDF-файл в заметку используя тот же синтаксис. В дополнении к этому, выможете указать определенную страницу внутри него: `![[My File.pdf#page=number]]`.
 
-### Embed notes
+### Вложенные заметки
 
-You can embed a note also, with the same syntax:
+Тем же способом можно вложить и другую заметку:
 
 ![[Поддерживаемые форматы файлов]]
 
-### iframe
+### Использование iframe
 
-"iframe" is a way to embed a web page in another. It's useful because Markdown can accept HTML, which is a simple language to construct the web pages we see every day.
+«iframe» – это способ вложения одной веб-страницы в другую. Он может использоваться, так как Markdown поддерживает использование HTML, который является простейшим языком для построения веб-страниц, которые мы видим каждый день. 
 
-For example:
+Например, такая запись:
 
 ```html
 <iframe src="https://www.youtube.com/embed/NnTvZWp5Q7o"></iframe>
 ```
 
-Produces:
+Встраивает видео с Youtube:
 
 <iframe src="https://www.youtube.com/embed/NnTvZWp5Q7o"></iframe>
 
-The basic syntax is:
+Основной синтаксис выглядит так:
 
 ```html
-<iframe src="INSERT YOUR URL HERE"></iframe>
+<iframe src="ВСТАВЬТЕ ВАШУ ССЫЛКУ ЗДЕСЬ"></iframe>
 ```
 
-Some websites have quirks that don't allow you to embed them. For example, you can't embed a YouTube video by using its normal URL, but you can use its embed URL which is `https://www.youtube.com/embed/VIDEO_ID`.
+Некоторые веб-сайты имеют осбенности, которые не позволяют вам встраивать их. Например, вы не можете встроить видео с YouTube, используя его обычный URL-адрес, но вы можете использовать его embed URL-адрес: `https://www.youtube.com/embed/VIDEO_ID`.
 
-If you want to embed a website, try searching for "{website} embed iframe".
+Если вы хотите встроить веб-сайт, попробуйте поискать для него встраивание в формате «{website} embed iframe».
 
-For example, you can embed Twitter tweets like so as suggested by search results:
+Например, вы можете вставлять твиты из Twitter так, как это предлагается результатами поиска:
 
 ```html
 <iframe
@@ -55,23 +55,24 @@ For example, you can embed Twitter tweets like so as suggested by search results
 
 ---
 
-### Developer notes
+### Примечания разработчика
 
-The syntax is inspired by Markdown's image syntax. We had two observations:
+Мы отталкивались от уже имеющегося в Markdown синтаксиса вставки изображений и исходили из следующих идей:
 
- 1. `[Image](link.png)` links to the image, but `![Image](link.png)` actually displays it.
+ 1. `[Image](link.png)` ссылается на изображение, а `![Image](link.png)` вставляет его.
 
- 2. The internal link syntax is based on this assumption: `[[My page]]` is a shortcut (or "syntactic sugar" if you will) for `[My page](My page)`.
+ 2. Синтаксис внутренней ссылки основан на предположении, что `[[My page]]` это сокращение (или «[синтаксический сахар](https://ru.wikipedia.org/wiki/%D0%A1%D0%B8%D0%BD%D1%82%D0%B0%D0%BA%D1%81%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D0%B9_%D1%81%D0%B0%D1%85%D0%B0%D1%80)», если угодно) для `[My page](My page)`.
 
-To combine these two things, we can come up with a third pattern:`![[My page]]` should be equivalent to `![My page](My page)` , which by the image convention, if the title is the same as the link, should display it.
+Объединив эти две вещи, мы создаем третий паттерн `![[My page]]`, являющийся эквивалентом `![My page](My page)` и соответствующий синтаксису вставки изображений.  При этом название ссылки должно совпадать с названием заметки.
 
-There are other implementations out there, for example Roam Research uses `{{embed: ((NODE_ID))}}`. We have also considered using the `((Page name))` syntax too, but we feel like `![[Page name]]` is more consistent, more familiar, and leaves more room so that the other symbols to have their own meanings.
+Встречаются и другие варианты реализации этого механизма. Например, в Roam Research для вставки используется `{{embed: ((NODE_ID))}}`. Мы тоже рассматривали возможность использования подобного синтаксиса `((Page name))`, но, как нам кажется, `![[Page name]]` больше подходит для этого. Он понятен и оставляет больше вариантов для использования других символов по назначению.
 
-#### Resize images
-You can resize images using the following syntax:
+#### Изменение размера изображений
 
-For markdown images, use `![AltText|100x100](https://url/to/image.png)`
+Вы можете изменять размер изображений (`ШИРИНАxВЫСОТА`) используя следующий синтаксис:
 
-For embeds, use `![[image.png|100x100]]`
+В формате Markdown `![AltText|100x100](https://url/to/image.png)`
 
-To have the image scale according to its aspect ratio, omit the height `![[image.png|100]]`
+В формате обычной вставки `![[image.png|100x100]]`
+
+Чтобы сохранить соотноление сторон изображения при масштабировании опустите параметр высоты `![[image.png|100]]`.
