--- a/Руководства/Внутренняя ссылка.md
+++ b/Руководства/Внутренняя ссылка.md
@@ -1,19 +1,19 @@
-Internal links are the backbone of your knowledge network.
+Внутренние ссылки являются каркасом вашей сети знаний.
 
-### Link to files
+### Ссылка на заметку
 
-To create an internal link, simply type `[[`. This will prompt you with the list of notes you can link to. Use `Up arrow` and `Down arrow` to navigate the suggestion list and `Enter` to select the current highlighted link.
+Для создания внутренней ссылки просто наберите `[[`. Вам будет предложен список заметок, на которые вы можете ссылаться. Используйте клавиши стрелок `Вверх` и `Вниз` для перемещения по списку и `Enter` для вставки ссылки на выделенную заметку.
 
-### Link to headings
+### Ссылка на заголовок
 
-You can also link to specific headers in files. Start typing a link like you would normally. When the note you want is highlighted, press `#` instead of `Enter` and you'll see a list of headings in that file. Continue typing or navigate with arrow keys as before, press `#`again at each subheading you want to add, and `Enter` to complete the link. 
+Вы можете сослаться на определенный заголовок внутри заметки. Начните вводить внутреннюю ссылку на заметку, как обычно. Когда нужная заметка будет выбрана из списка, нажмите `#` вместо `Enter` и вы увидите список заголовков этой заметки. Наберите название заголовка или перемещайтесь стрелками между ними. Нажимайте `#` для включения подзаголовков, если это необходимо. Для вставки ссылки нажмите `Enter`.
 
-To make the link display different text than its real note name in Preview, use the vertical pipe (`Shift+|`) For example: [[Another Page Title Here|Custom Link Name in Preview!]] This can be combined with linking to headers, as in [[Сворачивание списков и заголовков#By way of example|Example of Folding]].
+Для того чтобы в ссылке отображался текст, отличный от имени заметки на которую она ссылается в режиме Просмотра, используйте вертикальную черту `|`. Например, `[[Имя заметки|Отображаемое имя заметки]]`. Аналогичным образом можно изменить текст [[Сворачивание списков и заголовков#By way of example|ссылки на заголовок]].
 
-### Following Links
+### Переход по ссылкам
 
-- To follow a link in the Preview pane, simply click on the link.
-- To follow a link in a new panel from Preview, click while pressing `Ctrl/Cmd`''
-- To follow a link in the Editor pane, click the link while pressing `Ctrl/Cmd`.
-- To follow a link in a new panel from the Editor, click the link while pressing `Ctrl/Cmd-Shift`''
-- To see a preview of the linked content without leaving the current note, enable the [[Предпросмотр страницы]] plugin and a popup window will be displayed.
+- Для перехода по ссылке в режиме Просмотра, просто нажмите на нее.
+- Для открытия ссылку в новой области в режиме Просмотра, нажмите на нее удерживая `Ctrl/Cmd`.
+- Для перехода по ссылке в режиме Редактирования, нажмите на нее удерживая `Ctrl/Cmd`.
+- Для открытия ссылку в новой области в режиме Редактирования, нажмите на нее удерживая `Ctrl/Cmd-Shift`.
+- Для предварительного просмотра содержимого файла по ссылке, без перехода из текущей заметки, включите плагин [[Предпросмотр страницы]]. При наведении курсора на ссылку будет оборажаться всплывающее окно.
