--- a/Руководства/Захват информации.md
+++ b/Руководства/Захват информации.md
@@ -1,4 +1,4 @@
-### Copy and paste
+### Копирование и вставка
 
 When you see something useful online, you can simply select the text, copy, and paste in Obsidian. Obsidian will try to convert it into proper Markdown so that it fits right in.
 
