--- a/Руководства/Изменение настроек.md
+++ b/Руководства/Изменение настроек.md
@@ -1,4 +1,5 @@
-The settings can be found by clicking the gear in the bottom left corner, or by hitting `Ctrl/Cmd-,`. Most of them are fairly self-explanatory, but here are some notes that might be helpful.
+Настройки можно открыть нажав на шестеренку в нижнем левом углу или нажав сочетание клавиш `Ctrl/Cmd-,`. Большинство настроек интуитивно понятны, но некоторые требуют дополнительных пояснений.
 
-- Most of the settings are toggle switches. If there are more details to a setting, it may have a gear next to the switch for additional settings. For example, the gear next to Spell Check reveals the custom dictionary, so you can remove words you may have accidentally added.
-- Enabling plugins will cause their settings to appear in the list of tabs. For example, if you have the Daily Note plugin enabled, a setting tab will appear that allows you to further configure it.
+- Большая часть настроек это переключатели. Если у настройки есть дополнительные параметры, то радом с переключателем может отображаться шестеренка. Например, при нажатии на шестеренку рядом с переключателем «Проверять орфографию», откроется диалог настройки личного словаря, где можно удалить случайно добавленные в него слова.
+
+- Включение части плагинов приводит к тому, что их дополнительные настройки появляются в списке вкладок окна Настроек. Например, при включении плагина «Daily Note», появится соответствующая вкладка с дополнительными параметрами.
