--- a/Руководства/Переименование заметки.md
+++ b/Руководства/Переименование заметки.md
@@ -1,9 +1,9 @@
-If you're already editing the note, you can rename it simply by editing the text in the title:
+Если вы уже редактируете заметку, то переименовать ее можно отредактировав текст в названии файла:
 
 ![[Pasted image 6.png]]
 
-If you want to rename a note that you're not editing, go to [[Файловый менеджер]], right-click on the note or folder and choose "Rename":
+Редактирование названия файла так же можно вызвать нажатием клавиши `F2`.
+
+Если вы хотите переименовать заметку без редактирования, то сделать это можно в меню [[Файловый менеджер|файлового менеджера]], по правому клику на выбранном файле. Пункт всплывающего меню «Переименовать».
 
 ![[Pasted image 7.png]]
-
-An even faster way is to press `F2` while your mouse is over a note, which will take you straight to the renaming function.
