--- a/Руководства/Работа с несколькими файлами.md
+++ b/Руководства/Работа с несколькими файлами.md
@@ -1,8 +1,8 @@
-You can edit and view multiple files in Obsidian.
+Вы можете одновременно редактировать и просматривать несколько заметок в Obsidian.
 
-To effectively use split view, you only need to know a few things:
+Чтобы эффективно использовать раздельный просмотр, вам нужно знать всего несколько вещей:
 
-##### 1. ==Use Ctrl/Cmd key== when you want to open things in a new pane.
+##### 1. ==Используйте Ctrl/Cmd key==  когда хотите  открыть что-либо в новой области.
 
 By default, when you click something, it will open in the active pane. The active pane is marked with highlighted bar under the title, and its title is more visible than the inactive panes.
 
@@ -42,7 +42,7 @@ For more information see [[Связанная область|linked panes]].
 
 ##### 5. Panes can be ==rearranged by dragging==.
 
-Grab the icon in the upper left corner to arrange them however you need. For detailed information, see [[Макет области]].
+Grab the icon in the upper left corner to arrange them however you need. For detailed information, see [[Расположение области]].
 
 ---
 
