--- a/Руководства/Работа с обратными ссылками.md
+++ b/Руководства/Работа с обратными ссылками.md
@@ -1,6 +1,6 @@
-Backlinks are one of the most powerful features of Obsidian. As a result, they can sometimes be a bit confusing, so here's some things that might help.
+Обратные ссылки – одна из самых мощных функций Obsidian. Однако иногда их использование может сбить с толку. Далее размещены некоторые советы, которые могут помочь вам.
 
-The Backlinks panel has two sections, Linked mentions and Unlinked mentions.
+Панель обратных состояит из двух разделов – «Упоминания со ссылокой» и «Упоминания без ссылки»:
 
 ![[Backlinks.png]]
 
@@ -10,4 +10,4 @@ This can be a very powerful way of seeing connections between your notes that yo
 
 If a reference appears in the Unlinked mentions, and you want to link it, hovering over the text will bring up a Link button. Clicking this will automatically surround the highlighted text in the referenced note with brackets, making it into an explicit link.
 
-You can also create a separate, dedicated backlinks pane for a note under the More Options menu. This will be a [[Связанная область]] connected to the note, and can be moved around anywhere, as described in [[Макет области]]. There's also an option to do this in the [[Палитра команд]].
+You can also create a separate, dedicated backlinks pane for a note under the More Options menu. This will be a [[Связанная область]] connected to the note, and can be moved around anywhere, as described in [[Расположение области]]. There's also an option to do this in the [[Палитра команд]].
