--- a/Руководства/Создание заметок.md
+++ b/Руководства/Создание заметок.md
@@ -1,23 +1,22 @@
-Notes are created in a few ways, depending on your workflow:
+Заметки создаются несколькими способами, в зависимости от рабочего процесса:
 
-1. **Note-first approach**. If you need to create a note, you can do so in [[Файловый менеджер]]. The keyboard shortcut is `Ctrl/Cmd+N`. Also, if you have the [[Палитра команд]] plugin enabled (it's on by default), press `Ctrl/Cmd-p` and type ‘new’, then select **********
- 
-1. **Link-first approach**. If you like to freely create notes, just use an [[Внутренняя ссылка]] to link to any note name (it doesn't need to exist at the time of creating the link). To write in the newly created note, simply click on the link name. It will be automatically created in your Vault and ready to type!
+1. **Подход «от заметки»**. При необходимости создать заметку можно воспользоваться [[Файловый менеджер|файловым менеджером]]. Или сочетанием клавиш `Ctrl/Cmd+N`. Или, если включен плагин [[Палитра команд]], нажать `Ctrl/Cmd-p`, ввести «создать» и выбрать пункт создание новой заметки.
+1. **Подход «от ссылки»**. Если вы предпочитаете свободно создавать заметки, просто используйте [[Внутренняя ссылка|внутреннюю ссылку]] на любое имя заметки (она не обязательно должна существовать в момент создания привязки). Чтобы начать писать во вновь созданной заметке, просто нажмите на название ссылки. Заметка автоматически создастся в хранилище и ее можно сразу редактировать.
 
 ![[Pasted image 3.png]]
 
-After creating it, the note title will appear in the internal link auto-completion, so you don't need to type out the note name every time. When you type `[[` a popup will come up showing all the notes in your vault. Just type until you see the one you want, and hit `Return` or click on it, and the name will be automatically filled in.
+После создания заметки, ее заголовоу будет предлагаться в списке автозаполнения имен, так что не придется писать название заметки целиком каждый раз. Как только вы напишете `[[` выскочит окошко с перечнем заметок в хранилище. Просто набирайте название до тех пор пор, пока не появится нужное вам. Затем просто нажмите `Return` или кликните по нему мышкой, и название будет автоматически заполнено.
 
-If you already have folders set up in [[Файловый менеджер]], you can right-click on a folder to create notes inside it:
+Если у вас уже есть структура папок в [[Файловый менеджер|Файловом менеджере]], то создать заметку можно кликнув правой кнопкой мыши по папке. При этом заметка будет создана внутри папки:
 
 ![[Pasted image 4.png]]
 
-There are also buttons at the top of the file explorer for creating new notes or folders. 
+Так же для создание новых заметок и папок могут использоваться кнопки расположенные в верхней части файлового менеджера.
 
-Obsidian automatically saves your note two seconds after you stop typing, or if you close a pane. You can also manually save at any time by typing `Ctrl/Cmd-S`
+Obsidian автоматически сохраняет заметку через 2 секунды после прекращения набора текста или при закрытии области редактирования. Кроме того заметку можно сохранить в любое время нажав `Ctrl/Cmd-S`.
 
 ---
 
-### Related:
+### Связанные темы
 
 - [[Переименование заметки]]
